--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,4 @@
-/* Portfolio Site Style Sheet */
-/*
-Colors used
-
-Background Color (light green)
-Text Color (Dark Gray): #2B2B2B;
-Primary Color #357b70;
-Secondary Color #e0b354;
-
-*/
+/* applying some style to the app */
 
 body{
   background-color: #9dec9d;
